--- a/data_analysis_workshop.ipynb
+++ b/data_analysis_workshop.ipynb
@@ -171,19 +171,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "h4Ol23w1MDl6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-07ab51e3a8b4>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-07ab51e3a8b4>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    recovered_df = # YOUR CODE HERE\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "### TODO ###\n",
     "# Open \"data/time_series_19-covid-Recovered.csv\" using pd.read_csv(filepath)\n",
     "\n",
     "filepath = \"data/time_series_19-covid-Recovered.csv\"\n",
-    "recovered_df = pd.read_csv(filepath)"
+    "recovered_df = # YOUR CODE HERE"
    ]
   },
   {
@@ -213,7 +222,7 @@
     "### TODO ###\n",
     "# View what is stored in variable recovered_df\n",
     "\n",
-    "recovered_df"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -246,9 +255,7 @@
     "### TODO ###\n",
     "# Play around and display the shape, columns and datatypes of recovered_df.\n",
     "\n",
-    "recovered_df.shape\n",
-    "# recovered_df.columns\n",
-    "# recovered_df.dtypes"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -278,7 +285,7 @@
     "### TODO ###\n",
     "# Display the last 10 rows of recovered_df.\n",
     "\n",
-    "recovered_df.tail(10)"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -332,7 +339,7 @@
     "### TODO ###\n",
     "# Display the last 20 rows of the recovered_df DataFrame.\n",
     "\n",
-    "recovered_df[-20:]"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -377,7 +384,7 @@
     "### TODO ###\n",
     "# Get the 'Province/State' and 'Country/Region' columns.\n",
     "\n",
-    "recovered_df[['Province/State', 'Country/Region']]"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -413,7 +420,7 @@
     "### TODO ###\n",
     "# Retrieve the latitude of the Diamond Princess cruise ship (row 71).\n",
     "\n",
-    "recovered_df.loc[71, \"Lat\"]"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -459,7 +466,7 @@
     "### TODO ###\n",
     "# Create a boolean mask for the rows with \"Mainland China\" as the \"Country/Region\".\n",
     "\n",
-    "recovered_df[\"Country/Region\"] == \"Mainland China\""
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -488,9 +495,10 @@
    "source": [
     "### TODO ###\n",
     "# Apply the mask to recovered_df.\n",
+    "# Hint: You can apply a mask using dataframe[mask]\n",
     "\n",
     "mask = recovered_df[\"Country/Region\"] == \"Mainland China\"\n",
-    "recovered_df[mask]"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -527,7 +535,7 @@
     "### TODO ###\n",
     "# Get the rows of all countries containing the letter \"t\" (case insensitive).\n",
     "\n",
-    "f_mask = recovered_df[\"Country/Region\"].str.contains(\"(?i)t\")\n",
+    "f_mask = # YOUR CODE HERE\n",
     "recovered_df[f_mask]"
    ]
   },
@@ -562,7 +570,7 @@
     "### TODO ###\n",
     "# Create a mask to filter countries from this list: \"Australia\", \"France\", \"Singapore\".\n",
     "\n",
-    "isin_mask = recovered_df[\"Country/Region\"].isin([\"Australia\", \"France\", \"Singapore\"])\n",
+    "isin_mask = # YOUR CODE HERE\n",
     "recovered_df[isin_mask]"
    ]
   },
@@ -597,7 +605,7 @@
     "### TODO ###\n",
     "# Display only these columns: \"Province/State\", \"Country/Region\", \"Lat\" and \"Long\".\n",
     "\n",
-    "recovered_df.filter([\"Province/State\", \"Country/Region\", \"Lat\", \"Long\"])"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -618,7 +626,7 @@
     "# Display all the date columns using a regular expression.\n",
     "# Hint: The names of all these columns end with \"20\".\n",
     "\n",
-    "recovered_df.filter(regex=\"20$\")"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -671,7 +679,7 @@
     "### TODO ###\n",
     "# Set the 'Country/Region' column as the index.\n",
     "\n",
-    "recovered_df.set_index('Country/Region')"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -720,7 +728,7 @@
     "### TODO ###\n",
     "# Remove the latitude and longitude columns.\n",
     "\n",
-    "recovered_df.drop([\"Province/State\", \"Lat\", \"Long\"], axis='columns')"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -754,7 +762,7 @@
     "### TODO ###\n",
     "# Sort the DataFrame by descending index.\n",
     "\n",
-    "recovered_df.sort_index(ascending=False)"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -774,8 +782,7 @@
     "### TODO ###\n",
     "# Get the 20 rows with the most recoveries on February 18th, 2020 (= 2/18/20).\n",
     "\n",
-    "recovered_df.sort_values('2/18/20', ascending=False).head(20)\n",
-    "recovered_df.sort_values('2/18/20', ascending=True).tail(20)"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -814,7 +821,7 @@
     "### TODO ###\n",
     "# Get the total number of recoveries for each day.\n",
     "\n",
-    "recovered_df.sum()"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -849,7 +856,7 @@
     "# Get the total number of recoveries per country for each day.\n",
     "# Hint: Group your data by country, then sum over the aggregated rows.\n",
     "\n",
-    "recovered_df.groupby('Country/Region').sum()"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -880,11 +887,7 @@
     "#   4. sort the values by decreasing number of recoveries on February 18th, 2020\n",
     "#   5. only keep the first 20 rows\n",
     "\n",
-    "recovered_df.drop([\"Province/State\", \"Lat\", \"Long\"], axis=1) \\\n",
-    "            .groupby('Country/Region') \\\n",
-    "            .sum() \\\n",
-    "            .sort_values('2/18/20', ascending=False) \\\n",
-    "            .head(20)"
+    "# YOUR CODE HERE"
    ]
   },
   {
