--- a/data_analysis_workshop.ipynb
+++ b/data_analysis_workshop.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -92,16 +92,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "That is some fancy piece of code!\n",
-      "1 + 1 makes 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"That is some fancy piece of code!\")\n",
     "print(\"1 + 1 makes\", 1 + 1)"
@@ -161,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -300,7 +291,7 @@
     "# Open \"data/time_series_19-covid-Recovered.csv\" using pd.read_csv(filepath)\n",
     "\n",
     "filepath = \"data/time_series_19-covid-Recovered.csv\"\n",
-    "recovered_df = pd.read_csv(filepath)"
+    "recovered_df = # YOUR CODE HERE"
    ]
   },
   {
@@ -336,7 +327,7 @@
     "### TODO ###\n",
     "# View what is stored in variable recovered_df\n",
     "\n",
-    "recovered_df"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -375,7 +366,7 @@
     "### TODO ###\n",
     "# Play around and display the shape, columns and datatypes of recovered_df.\n",
     "\n",
-    "recovered_df.dtypes"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -411,7 +402,7 @@
     "### TODO ###\n",
     "# Display the last 10 rows of recovered_df.\n",
     "\n",
-    "recovered_df.head(20)"
+    "# YOUR CODE HERE"
    ]
   },
   {
@@ -478,7 +469,7 @@
     "### TODO ###\n",
     "# Display the last 20 rows of the recovered_df DataFrame.\n",
     "\n",
-    "recovered_df[:20]"
+    "# YOUR CODE HERE"
    ]
   },
   {
