added qr code and setup link

--- a/data_analysis_workshop.ipynb
+++ b/data_analysis_workshop.ipynb
@@ -11,8 +11,11 @@
    },
    "source": [
     "# Data Science Workshop: Data Analysis with Python\n",
-    "\n",
     "#### Learning the basics of Data Analysis using Python, Numpy and Pandas\n",
+    "\n",
+    "### Setup: https://info.lewagon.com/tokyo-data-analysis\n",
+    "\n",
+    "![https://info.lewagon.com/tokyo-data-analysis](assets/qrcode.jpg)\n",
     "\n",
     "By [Trouni Tiet](https://linkedin.com/in/trouni) for [Le Wagon Tokyo](https://www.lewagon.com/tokyo)"
    ]
