--- a/data_analysis_workshop.ipynb
+++ b/data_analysis_workshop.ipynb
@@ -10,14 +10,15 @@
     }
    },
    "source": [
-    "# Data Science Workshop: Data Analysis with Python\n",
+    "# <small>Data Science Workshop</small><br/>**Data Analysis with Python**\n",
     "#### Learning the basics of Data Analysis using Python, Numpy and Pandas\n",
     "\n",
-    "### Setup: https://info.lewagon.com/tokyo-data-analysis\n",
-    "\n",
-    "![https://info.lewagon.com/tokyo-data-analysis](assets/qrcode.jpg)\n",
-    "\n",
-    "By [Trouni Tiet](https://linkedin.com/in/trouni) for [Le Wagon Tokyo](https://www.lewagon.com/tokyo)"
+    "<table class=\"qr-code\">\n",
+    "    <tr>\n",
+    "        <td><img src=\"assets/qrcode.png\" /></td>\n",
+    "        <td><h2>https://info.lewagon.com/tokyo-data-analysis</h2></td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -41,7 +42,7 @@
     }
    },
    "source": [
-    "### Why not Excel for Data Science?"
+    "### Why not use Excel for Data Science?"
    ]
   },
   {
@@ -65,10 +66,11 @@
     }
    },
    "source": [
-    "- Excel can't work with large datasets (try to open [one of these datasets](https://www.who.int/healthinfo/statistics/mortality_rawdata/en/) with 2M+ rows)\n",
-    "- Painful to combine multiple files in Excel (now try to concatenate two of the datasets above!)\n",
-    "- Pull data from the web/APIs\n",
-    "- Python!"
+    "Unlike Excel, this notebook makes it easier to:\n",
+    "- **work with large datasets** (try to open [one of these datasets](https://www.who.int/healthinfo/statistics/mortality_rawdata/en/) with 2M+ rows in Excel)\n",
+    "- **combine multiple files** (try to concatenate two of the datasets above in Excel!)\n",
+    "- **pull data from the web/APIs**\n",
+    "- user Python!"
    ]
   },
   {
@@ -81,7 +83,7 @@
    "source": [
     "### How does this notebook work?\n",
     "\n",
-    "The cell below is a code cell. To run the code within it, first select it then click the play icon on the left, or **simply hit `[shift] + [enter]`**."
+    "The cell below is a code cell. To run the code within it, first select it then click the play icon on the left, or simply press `[shift] + [enter]`."
    ]
   },
   {
@@ -240,8 +242,12 @@
     "import os, requests\n",
     "\n",
     "# The csv files we will download from GitHub\n",
-    "filenames = [\"time_series_19-covid-Confirmed.csv\", \"time_series_19-covid-Deaths.csv\", \"time_series_19-covid-Recovered.csv\"]\n",
     "url = \"https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/\"\n",
+    "filenames = [\n",
+    "    \"time_series_19-covid-Confirmed.csv\",\n",
+    "    \"time_series_19-covid-Deaths.csv\",\n",
+    "    \"time_series_19-covid-Recovered.csv\"\n",
+    "]\n",
     "\n",
     "# Creating a /data directory for our notebook\n",
     "if not os.path.exists('data'):\n",
@@ -270,7 +276,7 @@
     "\n",
     "A DataFrame is a pandas object that we can manipulate using pandas functions. Think of it like a code representation of an excel spreadsheet.\n",
     "\n",
-    "Let's create a DataFrame by loading our first CSV file into our notebook! You can do this with the `read_csv` function.\n",
+    "Let's create a DataFrame by loading our first CSV file into our notebook! You can do this with the `read_csv()` function.\n",
     "\n",
     "```python\n",
     "pd.read_csv(filepath)\n",
@@ -347,9 +353,11 @@
     "\n",
     "You can get a basic idea about your DataFrame using these functions:\n",
     "```python\n",
-    "dataframe.shape     # Returns the shape of your DataFrame (rows x columns)\n",
-    "dataframe.columns   # Returns the list of columns\n",
-    "dataframe.dtypes    # Returns the datatypes of each column\n",
+    "dataframe.shape         # Returns the shape (rows, columns)\n",
+    "dataframe.columns       # Returns the list of columns\n",
+    "dataframe.dtypes        # Returns the datatypes of each column\n",
+    "dataframe.isna().sum()  # Returns missing values in each column \n",
+    "dataframe.describe()    # Returns descriptive statistics\n",
     "```"
    ]
   },
@@ -382,7 +390,7 @@
     }
    },
    "source": [
-    "Show the first rows using `.head()` and the last rows using `.tail()`. For example:\n",
+    "Show the first rows using `head()` and the last rows using `tail()`. For example:\n",
     "```python\n",
     "dataframe.head()      # Returns the first 5 rows by default\n",
     "dataframe.tail(20)    # Returns the last 20 rows\n",
@@ -492,15 +500,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DataFrames have similarities with dictionaries (objects/hashes). You can retrieve a column using:\n",
+    "DataFrames have similarities with dictionaries (objects/hashes). You can retrieve values from one or multiple columns using:\n",
     "\n",
     "```python\n",
-    "dataframe[['Column Name']]\n",
-    "# Note the double []. Columns are passed as a list.\n",
+    "dataframe[['Column Name']]  # Returns a DataFrame object\n",
+    "dataframe['Column Name']    # Returns a Series object (single column)\n",
     "```\n",
     "\n",
-    "\n",
-    "`dataframe[['Column Name']]` will return a DataFrame, whereas `dataframe['Column Name']` will return a different pandas Object type: a Series."
+    "Note the double `[]` to return a DataFrame: **the columns are passed as a list**."
    ]
   },
   {
@@ -538,7 +545,7 @@
    "source": [
     "### Getting a cell\n",
     "\n",
-    "You can get the value from a specific cell using `.loc[]`:\n",
+    "You can get the value from a specific cell using `loc[]`:\n",
     "\n",
     "```python\n",
     "dataframe.loc[row_indexer, column_indexer]\n",
@@ -593,7 +600,7 @@
     "We first start by creating a condition on a column, in order to create a boolean mask. Think of this mask as an array mapping each position of your column with either True or False depending on the condition.\n",
     "\n",
     "```python\n",
-    "recovered_df[\"Country/Region\"] == \"Japan\"\n",
+    "dataframe[\"Country\"] == \"Japan\"\n",
     "```"
    ]
   },
@@ -630,7 +637,7 @@
     }
    },
    "source": [
-    "We call this a boolean **mask** because we can now apply this mask to our dataframe and it will only return the rows that were marked True. The other rows (marked False) are now **masked out**."
+    "We call this a boolean **mask** because we can now apply this mask to our dataframe and it will only return the rows that were marked `True`. The other rows (marked `False`) are now **masked out**."
    ]
   },
   {
@@ -668,14 +675,14 @@
     }
    },
    "source": [
-    "**Note:** You can use `.str.contains()` to partially match the content of a cell. For example:\n",
+    "**Note:** You can use `str.contains()` to partially match the content of a cell. For example:\n",
     "```python\n",
     "f_mask = recovered_df[\"Country/Region\"].str.contains(\"F\")\n",
     "recovered_df[f_mask]\n",
     "# Will return rows from all countries containing \"F\"\n",
     "# Start your string with '(?i)' to make the search case insensitive\n",
     "```\n",
-    "\n"
+    "*`Series.str` is used to access the values of the series as strings.*"
    ]
   },
   {
@@ -712,7 +719,7 @@
     }
    },
    "source": [
-    "**Note:** You can use `.isin()` to match row values from within a list.\n",
+    "**Note:** You can use `isin()` to match row values from within a list.\n",
     "```python\n",
     "isin_mask = recovered_df[\"Country/Region\"].isin([\"Japan\", \"US\"])\n",
     "recovered_df[isin_mask]\n",
@@ -755,9 +762,11 @@
    "source": [
     "### Filtering columns\n",
     "\n",
-    "In addition to directly selecting multiple columns, you can also filter specific columns from your dataframe using:\n",
-    "- `.filter(items=['Column Name'])`\n",
-    "- `.filter(regex=\"...\")`"
+    "In addition to directly selecting multiple columns, you can also filter specific columns from your dataframe using `filter()`:\n",
+    "```\n",
+    "dataframe.filter(items=['Column Name'])\n",
+    "dataframe.filter(regex=\"...\")\n",
+    "```"
    ]
   },
   {
@@ -840,9 +849,9 @@
     "id": "57e3JOeXwQZm"
    },
    "source": [
-    "You can re-index your dataframe using `.set_index()`.\n",
+    "You can re-index your dataframe using `set_index()`.\n",
     "```python\n",
-    "DataFrame.set_index('Column Name')\n",
+    "dataframe.set_index('Column Name')\n",
     "```"
    ]
   },
@@ -897,7 +906,7 @@
    "source": [
     "### Remove rows or columns\n",
     "\n",
-    "Remove unused rows/columns using `.drop()`.\n",
+    "Remove unused rows/columns using `drop()`.\n",
     "```python\n",
     "dataframe.drop(rows, axis='rows')\n",
     "dataframe.drop(columns, axis='columns')\n",
@@ -939,9 +948,11 @@
    "source": [
     "### Sorting\n",
     "\n",
-    "You can sort your rows using `.sort_index()` and `.sort_values()`:\n",
-    "- `dataframe.sort_index(ascending=True)`\n",
-    "- `dataframe.sort_values('Column Name', ascending=True)`"
+    "You can sort your rows using `sort_index()` and `sort_values()`:\n",
+    "```python\n",
+    "dataframe.sort_index(ascending=True)\n",
+    "dataframe.sort_values('Column Name', ascending=True)\n",
+    "```"
    ]
   },
   {
@@ -1005,7 +1016,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can perform functions on all rows or columns such as `.sum()`, `.count()` or `.average()`. By default, the function aggregates the rows of your DataFrame. You can specify `axis='columns'` as an argument to perform the function over the columns.\n",
+    "You can perform functions on all rows or columns such as `sum()`, `count()` or `average()`. By default, the function aggregates the rows of your DataFrame. You can specify `axis='columns'` as an argument to perform the function over the columns.\n",
     "\n",
     "Examples:\n",
     "```python\n",
@@ -1049,7 +1060,7 @@
     "### Grouping\n",
     "\n",
     "To perform grouping you need to do the following steps:\n",
-    "1. **Split** the dataframe using `.groupby()`\n",
+    "1. **Split** the dataframe using `groupby()`\n",
     "2. **Apply** an aggregative function (*e.g.* `sum`, `count`, `mean`)"
    ]
   },
@@ -1135,7 +1146,7 @@
     }
    },
    "source": [
-    "We can easily plot charts using `.plot()`. By default, a line chart will be plotted, but you can specify the chart type using `kind='bar'` for example."
+    "We can easily plot charts using `plot()`. By default, a line chart will be plotted, but you can specify the chart type using `kind='bar'` for example."
    ]
   },
   {
@@ -1222,7 +1233,7 @@
     }
    },
    "source": [
-    "To plot multiple series on the same chart, we use `pyplot.plot()`."
+    "To plot multiple series on the same chart, we use `pyplot.plot()` from the `matplotlib` library."
    ]
   },
   {
