--- a/data_analysis_workshop.ipynb
+++ b/data_analysis_workshop.ipynb
@@ -10,12 +10,14 @@
     }
    },
    "source": [
-    "# <small>Data Science Workshop</small><br/>**Data Analysis with Python**\n",
+    "# <small>Le Wagon Tokyo | Data Science Workshop</small><br/>**Data Analysis with Python**\n",
     "#### Learning the basics of Data Analysis using Python, Numpy and Pandas\n",
+    "\n",
+    "<br/>\n",
     "\n",
     "<table class=\"qr-code\">\n",
     "    <tr>\n",
-    "        <td><img src=\"assets/qrcode.png\" /></td>\n",
+    "        <td><img src=\"assets/qrcode.png\" style=\"min-width: 150px; max-width: 300px;\"/></td>\n",
     "        <td><h2>https://info.lewagon.com/tokyo-data-analysis</h2></td>\n",
     "    </tr>\n",
     "</table>"
@@ -31,7 +33,7 @@
    "source": [
     "## Introduction about this notebook\n",
     "\n",
-    "A Jupyter Notebook (or Colab Notebook) is a document format that combines the strengths of a word processor, a spreadsheet software and most importantly, a code editor/environment. **This notebook document allows executable code and nicely formatted text, tables and charts to live side-by-side.** Python code can be written and executed within a clear and detailed context describing the thought process and implementation of a data science project."
+    "A Jupyter Notebook is a document format that combines the strengths of a word processor, a spreadsheet software and, most importantly, a code environment. This notebook document allows **executable code, nicely formatted text, dynamic tables and charts to live side-by-side**."
    ]
   },
   {
@@ -184,7 +186,7 @@
    "source": [
     "### How to find a dataset?\n",
     "\n",
-    "There are a lot of great sources to obtain data on the web. For example, many datasets are available on [Kaggle](https://www.kaggle.com/datasets) and [GitHub](https://github.com/awesomedata/awesome-public-datasets)"
+    "There are a lot of great sources to obtain data on the web. Here are great resources with many datasets to get started: [Kaggle](https://www.kaggle.com/datasets) and this [GitHub repository](https://github.com/awesomedata/awesome-public-datasets)"
    ]
   },
   {
@@ -597,7 +599,7 @@
    "source": [
     "#### Boolean indexing\n",
     "\n",
-    "We first start by creating a condition on a column, in order to create a boolean mask. Think of this mask as an array mapping each position of your column with either True or False depending on the condition.\n",
+    "We first start by creating a condition on a column, in order to create a boolean mask. Think of this mask as an array mapping each position of your column with either `True` or `False` depending on the condition.\n",
     "\n",
     "```python\n",
     "dataframe[\"Country\"] == \"Japan\"\n",
@@ -1262,7 +1264,17 @@
     }
    },
    "source": [
-    "# Thank you!"
+    "# Now, your turn...\n",
+    "Pick a topic you love, find one or more related datasets and practice what you've just learned!\n",
+    "\n",
+    "<br/>\n",
+    "\n",
+    "### **<center>Thank you!</center>**\n",
+    "\n",
+    "| <img src=\"assets/lewagon.png\" style=\"width: 2em;\"></i> | lewagon.com/tokyo |\n",
+    "| --- | :--- |\n",
+    "| <i class=\"fa fa-github fa-2x\"></i> | github.com/trouni |\n",
+    "| <i class=\"fa fa-linkedin fa-2x\"></i> | linkedin.com/in/trouni |"
    ]
   },
   {
