updated for new workshop

--- a/data_analysis_workshop.ipynb
+++ b/data_analysis_workshop.ipynb
@@ -72,7 +72,7 @@
     "- **work with large datasets** (try to open [one of these datasets](https://www.who.int/healthinfo/statistics/mortality_rawdata/en/) with 2M+ rows in Excel)\n",
     "- **combine multiple files** (try to concatenate two of the datasets above in Excel!)\n",
     "- **pull data from the web/APIs**\n",
-    "- user Python!"
+    "- use Python!"
    ]
   },
   {
@@ -998,7 +998,7 @@
    "outputs": [],
    "source": [
     "### TODO ###\n",
-    "# Get the 20 rows with the most recoveries on February 18th, 2020 (= 2/18/20).\n",
+    "# Get the 20 rows with the most recoveries on March 9th, 2020 (= 3/9/20).\n",
     "\n",
     "# YOUR CODE HERE"
    ]
@@ -1171,8 +1171,8 @@
     "# Preparing the format of our data to be plotted\n",
     "plot_data = recovered_df.groupby('Country/Region') \\\n",
     "            .sum() \\\n",
-    "            [['2/18/20']] \\\n",
-    "            .sort_values('2/18/20', ascending=False) \\\n",
+    "            [['3/9/20']] \\\n",
+    "            .sort_values('3/9/20', ascending=False) \\\n",
     "            .drop('Mainland China') \\\n",
     "            .head(10) \\\n",
     "\n",
@@ -1248,12 +1248,11 @@
    },
    "outputs": [],
    "source": [
-    "# Loading our deaths dataset\n",
-    "deaths_df = pd.read_csv(\"data/time_series_19-covid-Deaths.csv\")\n",
+    "# Loading our other dataset\n",
+    "confirmed_df = pd.read_csv(\"data/time_series_19-covid-Confirmed.csv\")\n",
     "\n",
     "# Plotting our charts\n",
-    "pyplot.plot(prepare(recovered_df), color='g')\n",
-    "pyplot.plot(prepare(deaths_df), color='r')"
+    "pyplot.plot(prepare(recovered_df), color='g')"
    ]
   },
   {
