--- a/data_analysis_workshop.ipynb
+++ b/data_analysis_workshop.ipynb
@@ -679,9 +679,9 @@
    "source": [
     "**Note:** You can use `str.contains()` to partially match the content of a cell. For example:\n",
     "```python\n",
-    "f_mask = recovered_df[\"Country/Region\"].str.contains(\"F\")\n",
-    "recovered_df[f_mask]\n",
-    "# Will return rows from all countries containing \"F\"\n",
+    "mask = recovered_df[\"Country/Region\"].str.contains(\"A\")\n",
+    "recovered_df[mask]\n",
+    "# Will return rows from all countries containing \"A\"\n",
     "# Start your string with '(?i)' to make the search case insensitive\n",
     "```\n",
     "*`Series.str` is used to access the values of the series as strings.*"
@@ -707,8 +707,8 @@
     "### TODO ###\n",
     "# Get the rows of all countries containing the letter \"t\" (case insensitive).\n",
     "\n",
-    "f_mask = # YOUR CODE HERE\n",
-    "recovered_df[f_mask]"
+    "t_mask = # YOUR CODE HERE\n",
+    "recovered_df[t_mask]"
    ]
   },
   {
